2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic for NSC

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Microsoft says that NSC (multicast playlists)
	are also of type "video/x-ms-asf":
	http://www.microsoft.com/windows/windowsmedia/howto/articles/webserver.aspx

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: fix typo that broke the build

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Paolo Borelli to add the
	text/x-rpm-spec mime-type for RPM .spec files (Closes: #9331)

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add image/x-icns mime-type for MacOS X icons

2007-01-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.kar (Karaoke files) as a pattern for
	MIDI files, video/mp4v-es is a mime-type for MPEG-4 video,
	video/x-ms-wvx, video/x-ms-wax and video/x-ms-wmx added as aliases of ASX,
	Add vivo patterns and mime alias, add FLI mime aliases, add video/x-ms-wm
	as an alias of video/x-ms-asf

2006-12-15  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add gzip/bz2 types for DVI, PDF and
	PostScript. Fixes #4658. Thanks to Bas Zoetekouw <bas@debian.org>

2006-12-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/pls as an alias for pls files

2006-12-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the Google Video Pointer mime-types
	(alias'ed to text/google-video-pointer)

2006-12-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add "video/flv" as an alias for FLV videos,
	as used by YouTube's HTTP server

2006-11-14  Christopher Aillon  <caillon@redhat.com>

	* freedesktop.org.xml.in: alias image/pdf to application/pdf

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add RTSPtextRTSP-style movie references