@@ -1,3 +1,7 @@
+2007-01-23  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add the audio/x-tta mime-type
+
 2007-01-15  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add magic for NSC
